--- a/public/css/style.css
+++ b/public/css/style.css
@@ -315,8 +315,24 @@ padding: 0;
 
 
 
+.nav-link.active {
+  font-weight: bold;
+}
 
-
+/* service */
+/* Tambahan style agar mirip gambar */
+.service-list-section h4 {
+    letter-spacing: 1px;
+}
+.service-list-section ul li {
+    border-bottom: 1px dotted #bbb;
+    padding: 4px 0 4px 0;
+    font-size: 1rem;
+}
+.service-list-section span.fw-bold {
+    font-size: 1.1rem;
+    letter-spacing: 2px;
+}
 
 
 
